<resources>
    <string name="app_name">AndroidTest</string>
    <string name="_0">0</string>
    <string name="increment">Increment</string>
    <string name="random_color">Random Color</string>
    <string name="switch_visibility">Switch Visibility</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="confirm">OK</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="start_game">Start Game</string>
    <string name="app_name_str">APP Name:</string>
    <string name="app_version_str">APP Version:</string>
    <string name="about_the_app_str">About the APP</string>
    <string name="inc">Increment</string>
    <string name="about_screen_title">About App</string>
    <string name="menu_screen_title">Main Menu</string>
    <string name="game_screen_title">Play!</string>
</resources>